add 'build your own sign-in and sign-up pages' section

--- a/docs/quickstarts/remix.mdx
+++ b/docs/quickstarts/remix.mdx
@@ -222,11 +222,13 @@ If you have not set the `v2_errorBoundary` future flag to `true`, use the `Clerk
 export const CatchBoundary = ClerkCatchBoundary();
 ```
 
-Clerk offers a set of prebuilt components that you can use to embed sign in, sign up, and other user management functions into your Next.js application. This example uses the `<SignIn/>` and `<SignUp />` components by utilizing Remix routes.
+### Build your own sign-in and sign-up pages
+
+In addition to the Hosted Pages, Clerk also offers a set of [prebuilt components](/docs/components/overview) that you can use instead to embed sign-in, sign-up, and other user management functions into your Next.js application. We are going to use the `<SignIn /> `and `<SignUp />` components by utilizing the Next.js optional catch-all route.
 
 The functionality of the components are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.dev).
 
-### Build your sign up
+#### Build your sign-up page
 
 ```tsx filename="app/routes/sign-up.$.tsx" copy
 import { SignUp } from "@clerk/remix";
@@ -241,7 +243,7 @@ export default function SignUpPage() {
 }
 ```
 
-### Build your sign in
+#### Build your sign-in page
 
 ```tsx filename="app/routes/sign-in.$.tsx" copy
 import { SignIn } from "@clerk/remix";
@@ -268,16 +270,6 @@ CLERK_AFTER_SIGN_UP_URL=/
 ```
 
 These values control the behavior of the components when you sign in or sign up and when you click on the respective links at the bottom of each component.
-
-### Update your dashboard settings
-
-To make sure you are using the embedded components, you will need to update your instance settings in the [Clerk Dashboard](https://dashboard.clerk.dev) to use the embedded components.
-
-<Images src="/docs/images/common/path-setting.png" width={1344} height={523} alt="Path setting Imagee" />
-
-<Callout type="info" emoji="ℹ️">
-  By default, the Clerk components inherit the font family.
-</Callout>
 
 ### Protecting your pages
 
@@ -311,7 +303,7 @@ export default function Index() {
 
 #### Server side
 
-To protect your routes, you can use the the loader to check for the `userId` singleton. If it doesn't exist, redirect your user back to the sign in page.
+To protect your routes, you can use the the loader to check for the `userId` singleton. If it doesn't exist, redirect your user back to the sign-in page.
 
 ```tsx filename="routes/index.tsx" copy
 import { UserButton } from "@clerk/remix";
