remove apostrophe from SDK's

--- a/docs/references/community.mdx
+++ b/docs/references/community.mdx
@@ -1,11 +1,11 @@
 ---
-title: Community SDK's
-description: Explore SDK's created by the Clerk community.
+title: Community SDKs
+description: Explore SDKs created by the Clerk community.
 ---
 
-# Community SDK's
+# Community SDKs
 
-Explore SDK's created by the Clerk community.
+Explore SDKs created by the Clerk community.
 
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
