update content based on clerk's resources

--- a/docs/references/backend/organization/update-organization-membership-metadata.mdx
+++ b/docs/references/backend/organization/update-organization-membership-metadata.mdx
@@ -10,7 +10,9 @@ Updates the metadata associated with a user's organization membership.
 ```tsx
 const organizationId = 'my-organization-id';
 
-const update = clerkClient.organizations.updateOrganizationMembershipMetadata(organizationId,{
+const userId = 'my-user-id';
+
+const update = clerkClient.organizations.updateOrganizationMembershipMetadata(organizationId, userId, {
   publicMetadata:{
     "example": "metadata"
   }
