--- a/docs/references/backend/organization/update-organization-metadata.mdx
+++ b/docs/references/backend/organization/update-organization-metadata.mdx
@@ -10,7 +10,7 @@ Updates the metadata associated with the specified organization ID.
 ```tsx
 const organizationId = 'my-organization-id';
 
-const update = clerkClient.organizations.updateOrganizationMetadata(organizationId,{
+const update = clerkClient.organizations.updateOrganizationMetadata(organizationId, {
   publicMetadata:{
     "example": "metadata"
   }
@@ -21,5 +21,6 @@ const update = clerkClient.organizations.updateOrganizationMetadata(organization
 
 | Name | Type	| Description |
 | --- | --- | --- |
+| `organizationId` | `string` | The ID of the organization to update. |
 | `publicMetadata?` | `Record<string, unknown>` | Metadata saved on the organization, that is visible to both your Frontend and Backend APIs. |
 | `privateMetadata?` | `Record<string, unknown>` | Metadata saved on the organization that is only visible to your Backend API. |
