--- a/docs/organizations/metadata.mdx
+++ b/docs/organizations/metadata.mdx
@@ -3,9 +3,9 @@ title: Organization Metadata
 description: Organization objects hold a set of metadata that can be used internally to store arbitrary information.
 ---
 
-## Overview
+# Organization Metadata
 
-Metadata allows for custom data to be saved on the `Organization` object, `Organization Invitation` object, and `Organization Membership` object. There are two types of metadata: "**public**", and "**private**". Choosing which metadata field you should use for setting custom attributes on your organizations becomes a matter of access and visibility.
+Metadata allows for custom data to be saved on the `Organization` and `Organization Membership` objects. There are two types of metadata: **public** and **private**. Choosing which metadata field you should use for setting custom attributes on your organizations becomes a matter of access and visibility.
 
 <Tables
   headings={["Metadata", "Frontend API", "Backend API"]}
@@ -27,56 +27,40 @@ Metadata allows for custom data to be saved on the `Organization` object, `Organ
   ]}
 />
 
-<Callout type="info" emoji="ℹ️">
-    Please note that Organization Invitations can only include **public** metadata.
-</Callout>
-
 <Callout type="warning">
     Metadata is limited to **8kb** maximum.
 </Callout>
 
 Both public and private metadata are set from the [Backend API](https://clerk.com/docs/reference/backend-api), but public metadata can be accessed from the [Frontend API](https://reference.clerk.dev/reference/frontend-api-reference) and [Backend API](https://clerk.com/docs/reference/backend-api). These types of metadata can be used to access non-sensitive information about an organization, such as their profile picture or their name. They can be used to build UIs where an organization might not be signed in, but you still want to show some of their profile info.
 
-## Organization Metadata
-
-### Public metadata
-
 The `publicMetadata` property should be used if you need to set some metadata from your backend and have them displayed as read-only on the frontend.
-
-```ts
-const updateOrg = await organizations.updateOrganizationMetadata(OrgID,{publicMetadata})
-```
-
-### Private metadata
 
 The `privateMetadata` property should be used if custom attributes contain sensitive information that should not be displayed on the frontend.
 
-```ts
-const updateOrg = await organizations.updateOrganizationMetadata(OrgID,{privateMetadata})
-```
+## Examples
 
-## Organization Membership Metadata
-
-### Public metadata
-
-The `publicMetadata` property should be used if you need to set some metadata from your backend and have them displayed as read-only on the frontend.
-
-### Private metadata
-
-The `privateMetadata` property should be used if custom attributes contain sensitive information that should not be displayed on the frontend.
+### [`updateOrganizationMetadata`](/docs/references/backend/organization/update-organization-metadata)
 
 ```ts
-const updateOrg = await organizations.updateOrganizationMembershipMetadata(OrgID,{privateMetadata})
+const organizationId = 'my-organization-id';
+
+const update = await organizations.updateOrganizationMetadata(organizationId, {
+  publicMetadata:{
+    "example": "metadata"
+  }
+});
 ```
 
-## Organization Invitation Metadata
+### [`updateOrganizationMembershipMetadata`](/docs/references/backend/organization/update-organization-membership-metadata)
 
-### Public metadata
+```tsx
+const organizationId = 'my-organization-id';
 
-The `publicMetadata` property should be used if you need to set some metadata from your backend and have them displayed as read-only on the frontend.
+const userId = 'my-user-id';
 
-```ts
-const updateOrg = await organizations.updateOrganizationInvitationMetadata(OrgID,{publicMetadata})
+const update = await organizations.updateOrganizationMembershipMetadata(organizationId, userId, {
+  publicMetadata:{
+    "example": "metadata"
+  }
+});
 ```
-
-
