DOCS-308 : remove auth typing

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -345,7 +345,7 @@ export default async function handler(
     import { auth } from "@clerk/nextjs";
 
     export default function Page() {
-      const { userId } : { userId: string | null } = auth();
+      const { userId } = auth();
       // ...
     }
     ```
