DOCS-307 : Add link to Clerk object

--- a/docs/references/react/use-clerk.mdx
+++ b/docs/references/react/use-clerk.mdx
@@ -1,6 +1,6 @@
 ---
 title: useClerk()
-description: The `useClerk` hook provides access to the the Clerk object, giving you the ability to build alternatives to any Clerk Component.
+description: The `useClerk` hook provides access to the [`Clerk`](/docs/references/javascript/clerk/clerk) object, giving you the ability to build alternatives to any Clerk Component.
 ---
 
 import { Callout } from "nextra-theme-docs";
