DOCS-306: Add appearance prop to table

--- a/docs/components/clerk-provider.mdx
+++ b/docs/components/clerk-provider.mdx
@@ -129,6 +129,13 @@ ReactDOM.render(
     },
     {
       cells: [
+        <code>appearance?</code>,
+        <code>object</code>,
+        <>Optional object to customize your Components. Will only affect Clerk Components and not Clerk Hosted pages.</>,
+      ],
+    },
+    {
+      cells: [
         <code>allowedRedirectOrigins?</code>,
         <code>{`Array<string | RegExp>`}</code>,
         <>Optional array of domains used to validate against the query param of an auth redirect.
