--- a/docs/authentication/social-connections/slack.mdx
+++ b/docs/authentication/social-connections/slack.mdx
@@ -15,7 +15,7 @@ Adding social connection with Slack to your app with Clerk is done in a few step
 
 To make the development flow as smooth as possible, Clerk uses preconfigured shared OAuth credentials and redirect URIs for development instances - no other configuration is needed.
 
-For production instances, you will need to generate your own Client ID and Client secret using your Spotify account.
+For production instances, you will need to generate your own Client ID and Client secret using your Slack account.
 
 > The purpose of this guide is to help you create a Slack OAuth app - if you're looking for step-by-step instructions using Clerk to add social connection (OAuth) to your application, follow the [Social connection (OAuth) guide](/docs/authentication/social-connections/oauth).
 
