--- a/docs/references/react/use-organization-list.mdx
+++ b/docs/references/react/use-organization-list.mdx
@@ -3,21 +3,14 @@ title: useOrganizationList()
 description: Access methods for switching between active organizations and for listing available memberships, invitations and suggestions.
 ---
 
-import { Callout } from "nextra-theme-docs";
-import { Tables } from "@/components/Table";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `useOrganizationList()`
 
-Access methods for switching between active organizations and for listing available memberships, invitations and suggestions.
-
-`useOrganizationList` enables developers to fetch the memberships, invitations or suggestsions for an active user.
-
-`Note: these resources are paginated`
-
-The hook requires developers to opt-in by specifying which resource they need to fetch and paginate through. It is ideal for infinite lists or tables
+The `useOrganizationList` hook allows you to retrieve the memberships, invitations, or suggestions for an active user. This hook also gives you the ability to create an organization and set the active organization.
 
 ## Usage
+
+The `useOrganizationList` hook requires developers to opt-in by specifying which resource they need to fetch and paginate through. It is ideal for infinite lists or tables.
+
 ### Infinite list of joined organizations
 <CodeBlockTabs options={['Next.js', 'React']}>
 ```tsx copy filename="pages/joined-organizations.tsx"
@@ -221,47 +214,52 @@ export default InvitationsTable;
 </CodeBlockTabs>
 
 ## Parameters
-useOrganizationList accepts a single object with the following properties
+
+`useOrganizationList` accepts a single object with the following properties:
+
 | Properties | Description |
 | --- | --- |
-| `userMemberships` | `CommonPaginatedParams` (Optional) |
-| `userInvitations` | `CommonPaginatedParams` (Optional) and status which describes the status of an invitation. Defaults to `pending`. |
-| `userSuggestions` | `CommonPaginatedParams` (Optional) and status which describes the status of a suggestion. Defaults to `pending`. |
+| `userMemberships` | [`CommonPaginatedParams`](#commonpaginatedparams) |
+| `userInvitations` | [`CommonPaginatedParams`](#commonpaginatedparams) and `status` which describes the status of an invitation, defaults to `pending`. |
+| `userSuggestions` | [`CommonPaginatedParams`](#commonpaginatedparams) and `status` which describes the status of a suggestion, defaults to `pending`. |
 
 ### `CommonPaginatedParams`
 
-CommonPaginatedParams can be either `true` or an object with the properties described bellow.
-If it `true` all the defaults values will be used.
+`CommonPaginatedParams` can be either `true` or an object with the properties described below. If set to `true`, all of the default values will be used.
 
 | Properties | Description |
 | --- | --- |
-| `initialPage` | A number and can be used to skip the first n-1 pages. For example if initialPage is set to 10, it is will skip the first 9 pages and will fetch the 10th page. Defaults to `1`. |
-| `pageSize` | A number that indicates the maximum number of  results that should be returned for a specific page. Defaults to `10`. |
-| `keepPreviousData` | If true it will persist the cached data until the new data has been fetched. Defaults to `false`. |
-| `infinite` | If true the new downloaded data will be appended to the list with the existing data. Ideal for infinite lists. Defaults to `false`. |
+| `initialPage` | A number that can be used to skip the first n-1 pages. For example, if `initialPage` is set to 10, it is will skip the first 9 pages and will fetch the 10th page. Defaults to `1`. |
+| `pageSize` | A number that indicates the maximum number of results that should be returned for a specific page. Defaults to `10`. |
+| `keepPreviousData` | If `true`, it will persist the cached data until the new data has been fetched. Defaults to `false`. |
+| `infinite` | If `true`, the new downloaded data will be appended to the list with the existing data. Ideal for infinite lists. Defaults to `false`. |
 
 ## Returns
+
+The userMemberships, userInvitations, and userSuggestions are returned as paginated lists.
+
 | Variables | Description |
 | --- | --- |
-| `isLoaded` | A boolean that until Clerk loads and initializes, will be set to false. Once Clerk loads, isLoaded will be set to true |
+| `isLoaded` | A boolean is set to `false` until Clerk loads and initializes. Once Clerk loads, `isLoaded` will be set to `true`. |
 | `createOrganization` | A function that returns a promise that resolves to the newly created Organization. It accepts a name and a slug |
 | `setActive` | A function that sets the active organization. It accepts either the organization object or the organization id. |
-| `userMemberships` | API for fetching paginated resources. See `PaginatedResources` below |
-| `userInvitations` | API for fetching paginated resources. See `PaginatedResources` below |
-| `userSuggestions` | API for fetching paginated resources. See `PaginatedResources` below |
+| `userMemberships` | API for fetching [paginated resources](#paginatedresources). |
+| `userInvitations` | API for fetching [paginated resources](#paginatedresources). |
+| `userSuggestions` | API for fetching [paginated resources](#paginatedresources). |
 
 ### `PaginatedResources`
+
 | Variables | Description |
 | --- | --- |
 | `data` | An array that contains the fetched data. |
 | `count` | The total count of data that exist remotely. |
-| `isLoading` | A boolean that is true if there is an ongoing request and there is no fetched data. |
-| `isFetching` | A boolean that is true if there is an ongoing request or a revalidation. |
+| `isLoading` | A boolean that is `true` if there is an ongoing request and there is no fetched data. |
+| `isFetching` | A boolean that is `true` if there is an ongoing request or a revalidation. |
 | `isError` | A boolean that indicates the request failed. |
 | `page` | A number that indicates the current page. |
 | `pageCount` | A number that indicates the total amount of pages. It is calculated based on `count` , `initialPage` , and `pageSize` |
-| `fetchPage` | A function that trigger a specific page to be loaded. |
-| `fetchPrevious` | A helper function that trigger the previous page to be loaded. This is the same as `fetchPage(page=> Math.max(0, page - 1))` |
-| `fetchNext` | A helper function that trigger the previous page to be loaded. This is the same as `fetchPage(page=> Math.max(0, page + 1))` |
+| `fetchPage` | A function that triggers a specific page to be loaded. |
+| `fetchPrevious` | A helper function that triggers the previous page to be loaded. This is the same as `fetchPage(page=> Math.max(0, page - 1))` |
+| `fetchNext` | A helper function that triggers the previous page to be loaded. This is the same as `fetchPage(page=> Math.max(0, page + 1))` |
 | `hasNextPage` | A boolean that indicates if there are available pages to be fetched. |
 | `hasPreviousPage` | A boolean that indicates if there are available pages to be fetched. |
