Added a missing 'api/' for the App Router webhook path

--- a/docs/users/sync-data.mdx
+++ b/docs/users/sync-data.mdx
@@ -153,7 +153,7 @@ Next you will want to retrieve the Webhook signing secret from the Clerk Dashboa
 
 ![signing-secret-example](/docs/images/users/guides/sync-backend/sign-secret.png)
 
-```ts copy filename="app/webhook/route.ts"
+```ts copy filename="app/api/webhook/route.ts"
 import { Webhook } from 'svix'
 import { headers } from 'next/headers'
 import { WebhookEvent } from '@clerk/nextjs/server'
