--- a/docs/users/sync-data.mdx
+++ b/docs/users/sync-data.mdx
@@ -203,7 +203,7 @@ export async function POST(req: Request) {
     })
   }
 
-  // get the id and type
+  // Get the ID and type
   const { id } = evt.data;
   const eventType = evt.type;
 
