Apply suggestions from code review
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/users/sync-data.mdx
+++ b/docs/users/sync-data.mdx
@@ -63,7 +63,7 @@ Now you need to set up your backend endpoint to receive the webhook events. The 
 
 <Tab>
 
-If you're using Next.js with Page Router, you can create a webhook endpoint in the `pages/api` directory.
+If you're using Next.js with Pages Router, you can create a webhook endpoint in the `pages/api` directory.
 
 Svix provides a package for verifying the webhook signature, making it easy to verify the authenticity of the webhook events.
 
@@ -160,36 +160,36 @@ import { WebhookEvent } from '@clerk/nextjs/server'
 
 export async function POST(req: Request) {
 
-  // you can find this in the Clerk Dashboard -> Webhooks -> choose the webhook
+  // You can find this in the Clerk Dashboard -> Webhooks -> choose the webhook
   const WEBHOOK_SECRET = process.env.WEBHOOK_SECRET
 
   if (!WEBHOOK_SECRET) {
     throw new Error('Please add WEBHOOK_SECRET from Clerk Dashboard to .env or .env.local')
   }
 
-  // get the headers
+  // Get the headers
   const headerPayload = headers();
   const svix_id = headerPayload.get("svix-id");
   const svix_timestamp = headerPayload.get("svix-timestamp");
   const svix_signature = headerPayload.get("svix-signature");
 
-  // if there are no headers, error out
+  // If there are no headers, error out
   if (!svix_id || !svix_timestamp || !svix_signature) {
     return new Response('Error occured -- no svix headers', {
       status: 400
     })
   }
 
-  // get the body
+  // Get the body
   const payload = await req.json()
   const body = JSON.stringify(payload);
 
-  // create a new SVIX instance with your secret.
+  // Create a new SVIX instance with your secret.
   const wh = new Webhook(WEBHOOK_SECRET);
 
   let evt: WebhookEvent
 
-  // verify the payload with the headers
+  // Verify the payload with the headers
   try {
     evt = wh.verify(body, {
       "svix-id": svix_id,
