update content; optimize images

--- a/docs/authentication/configuration/email-options.mdx
+++ b/docs/authentication/configuration/email-options.mdx
@@ -170,13 +170,315 @@ This is especially useful for promoting changes from your development or staging
 
 To copy to another instance, you will need to first click on the **Copy to** button and then from the sub-menu select the target instance.
 
+<Callout type="warning">
+  The copy icon will not appear if there are no other instances available on your application.
+</Callout>
+
 <Images 
 width={3024}
 height={1652}
 src="/docs/images/authentication/email-sms-options/copy-button.jpg"
-alt="The 'Copy' button  template customization page. A red arrow points to the 'Revert' button."
+alt="The 'Invitation' email template customization page. A red arrow points to the 'Copy' button."
 />
 
 Since this change will override the current state of the template on the target instance, you will be asked to confirm your choice.
 
-Note that the copy icon will not appear if there are no other instances available on your application.
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/copy-prompt.jpg"
+alt="The 'Invitation' email template customization page. A popup window titled 'Copy template' asks the user to confirm their decision in copying the 'invitation' template to the 'Production' instance."
+/>
+
+## Email template editor 
+
+The email template editor comprises of template settings & the WYSIWYG editor.
+
+The WYSIWYG editor is split into two parts:
+
+- The toolbar
+- The text area
+
+Since the toolbar exposes quite a few tools, we will examine them in more detail in the following sub-sections.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/WYSIWYG-editor.jpg"
+alt="The 'WYSIWG' editor with a red box around the toolbar and a red box around the text area. Both sections are labeled accordingly."
+/>
+
+### Template settings
+
+The following settings can be changed for an email template:
+
+#### Delivered by Clerk
+
+Out of the box, Clerk will deliver your emails using its own Email Service Provider (ESP), which is currently [SendGrid](https://sendgrid.com/). However, if you wish to handle delivery of emails on your own, then you can toggle **Delivered by Clerk** off.
+
+This means that Clerk will no longer be sending this particular email and in order to deliver it yourself, you will need to listen to the `emails.created` webhook and extract the necessary info from the event payload.
+
+<Callout type="info">
+  This is a per-template setting.
+</Callout>
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/delivered-by-clerk.jpg"
+alt="The 'Invitation' email template customization page. There is a red box around the 'Delivered by Clerk' section."
+/>
+
+#### Template name
+
+The template name is a human-friendly name for identifying the template on the template listing page. It does not affect the outgoing email in any way.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/template-name.jpg"
+alt="The 'Invitation' email template customization page. There is a red box around the 'Name' section."
+/>
+
+#### Send from
+
+Clerk will populate the 'from' email address with:
+
+<local part>@<your-domain>
+
+The local part depends on the type of email sent (verification code, invitation, etc).
+
+If you wish to override the local part with your own value, e.g. `accounting`, `sales`, etc, then set that value in the provided input.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/template-from.jpg"
+alt="The 'Invitation' email template customization page. There is a red box around the 'Send from' section."
+/>
+
+### Toolbar controls
+
+Note that the toolbar contains 2 types of controls:
+
+1. Buttons - expose a sub-menu with more settings you can apply to the currently selected block or text; you can switch from one button to another with a single click.
+2. Toggles - switch the editor to another view mode, in which all other tools become disabled. To exit the current mode, you will need to toggle back.
+
+#### Shortcuts button
+
+Opens a popup with the keyboard shortcuts that the editor supports. Note that the editor supports the usual **Copy**, **Paste**, **Undo** and **Redo** shortcuts you might be accustomed to from other editors.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/editor-shortcuts.jpg"
+alt="The 'Invitation' email template customization page. There is a red box around the 'Shortcuts' icon in the toolbar of the 'Email body' WYSIWG editor."
+/>
+
+#### Mobile view toggle
+
+Shows how the email will render on a mobile device with a portrait aspect ratio.
+
+Click on the mobile view toggle again to return to desktop view.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/editor-mobile-view.jpg"
+alt="The 'Invitation' email template customization page. There is a red box around the 'Mobile view' icon in the toolbar of the 'Email body' WYSIWG editor."
+/>
+
+#### HTML mode toggle
+
+Switches the editor to source mode. The source format is Revolvapp's own template syntax, which is HTML-like and transpiles to HTML that can be rendered by browsers and email clients.
+
+For this tool to appear, you will need to unselect any currently selected block.
+
+To exit HTML/source mode, click on the toggle again.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/editor-code.jpg"
+alt="The 'Invitation' email template customization page. There is a red box around the 'HTML' icon in the toolbar of the 'Email body' WYSIWG editor."
+/>
+
+#### Background button
+
+Allows selecting a color or image as a background for the currently selected block.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/editor-background.jpg"
+alt="The 'Invitation' email template customization page. There is a red box around the 'Background' icon in the toolbar of the 'Email body' WYSIWG editor."
+/>
+
+#### Settings button
+
+Opens a popup with settings contextually based on the selected block or text.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/editor-settings.jpg"
+alt="The 'Invitation' email template customization page. There is a red box around the 'Settings' icon in the toolbar of the 'Email body' WYSIWG editor."
+/>
+
+#### Add block button
+
+Allows you to insert a new block of content. For the button to appear, you will need to select the existing block below which you would like the new block to be inserted.
+
+The editor comes with a number of predefined blocks such as blocks with a header, image, button, multiple columns, etc.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/editor-add-block.jpg"
+alt="The 'Invitation' email template customization page. There is a red box around the 'Add block' icon in the toolbar of the 'Email body' WYSIWG editor."
+/>
+
+#### Alignment button
+
+Enables horizontal alignment (left, right or center). For the button to appear, you will need to select an element that can be aligned, such as a text node.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/editor-alignment.jpg"
+alt="The 'Invitation' email template customization page. There is a red box around the 'Alignment' icon in the toolbar of the 'Email body' WYSIWG editor."
+/>
+
+#### Link button
+
+Converts a selected text fragment into a link. Users can configure the link text and the URL that the link should point to. For the button to appear, you will need to select an element that can be turned into a link, such as a text node.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/editor-link.jpg"
+alt="The 'Invitation' email template customization page. There is a red box around the 'Link' icon in the toolbar of the 'Email body' WYSIWG editor."
+/>
+
+#### Text color button
+
+Exposes a color picker so that you can select the color of the fonts in the affected block or text fragment. For the button to appear, you will need to click inside a text node.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/editor-text-color.jpg"
+alt="The 'Invitation' email template customization page. There is a red box around the 'Link' icon in the toolbar of the 'Email body' WYSIWG editor."
+/>
+
+#### Variable button
+
+Shows a dropdown with the available variables for the current template. For the button to appear, you will need to click inside a text node. Upon insertion, the variable will be automatically wrapped in curly braces; there is no need to add them yourself.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/editor-variables.jpg"
+alt="The 'Invitation' email template customization page. There is a red box around the 'Variable' icon in the toolbar of the 'Email body' WYSIWG editor."
+/>
+
+#### Border button
+
+Permits setting a border width, color and radius on a given block. Using the radius you can give a block rounded corners. For the button to appear, you will need to click on an element that allows borders, such as a button.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/editor-border.jpg"
+alt="The 'Invitation' email template customization page. There is a red box around the 'Border' icon in the toolbar of the 'Email body' WYSIWG editor."
+/>
+
+### How to make buttons & links inherit your theme colors
+
+As you may have noticed, the links and buttons in the Clerk-provided templates automatically show in the colors selected in the **Customization > Theme** section. Specifically:
+
+The color of buttons and links in your emails maps to the primary color set in your theme
+The font color of buttons in your emails maps to the button text color set in your theme
+Since you may not want all buttons or links to have this behavior, you will need to opt in by using the following classes:
+
+- `cl-branded-button` - for buttons
+- `cl-branded-link` - for links
+
+These classes can be added as attributes to the Revolvapp template markup after toggling the editor to HTML (i.e. source) mode.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/cl-branded-button-class.jpg"
+alt="The 'Invitation' email template customization page. The 'email body' WSYIWG editor is toggled to HTML mode. There is a red arrow pointing to the 'cl-branded-button' class."
+/>
+
+### Text area controls
+
+The email editor text area is intended mainly for authoring content. Though, if you click on a block, a set of tools will also appear:
+
+- Move handle - Allows the selected block to be moved up or down with regard to its sibling blocks
+- Delete - Removes the block from the template
+- Clone - Clones the block using the exact same settings
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/editor-text-area-controls.jpg"
+alt="The 'Invitation' email template customization page. The 'Accept invitation' button has been clicked, revealing a small toolbar. There is a red box around the toolbar with a red arrow pointing to it."
+/>
+
+## SMS template editor
+
+The SMS editor is much simpler to use since SMS supports plain text only. You can edit the message contents to your liking via the provided text area. You can also set up template settings according to your needs.
+
+When you are satisfied with your edits you can persist them by clicking on the **Apply Changes** button.
+
+### Template settings
+
+The following settings can be changed for an SMS template:
+
+#### Delivered by Clerk
+
+Out of the box, Clerk will deliver your SMS messagess using its own SMS Gateway. However, if you wish to handle SMS delivery on your own, then you can toggle delivery by Clerk off.
+
+This means that Clerk will no longer be sending this particular SMS and in order to deliver it yourself you will need to listen to the `sms.created` webhook and extract the necessary info from the event payload.
+
+<Callout type="info">
+  This is a per-template setting.
+</Callout>
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/sms-delivered-by-clerk.jpg"
+alt="The 'Invitation' SMS template customization page. There is a red box around the 'Delivered by Clerk' section."
+/>
+
+#### Template name
+
+The template name is a human-friendly name for identifying the template on the template listing page. It does not affect the outgoing SMS message in any way.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/sms-template-name.jpg"
+alt="The 'Invitation' SMS template customization page. There is a red box around the 'Name' section."
+/>
+
+#### Variable widget
+
+To insert a variable at the current cursor position, you can click on the corresponding variable badge in the variable widget that is located adjacent to the text area.
+
+Note that the invitation template supports public invitation metadata, whereas the verification code template supports public user metadata (in the case that a user already exists).
+
+You can interpolate a particular metadata key as follows:
+
+`{{invitation.public_metadata.foo.bar}}`
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/sms-variables.jpg"
+alt="The 'Invitation' SMS template customization page. There is a red box around the 'Insert variables' section."
+/>
