--- a/docs/authentication/configuration/email-options.mdx
+++ b/docs/authentication/configuration/email-options.mdx
@@ -115,7 +115,7 @@ Templates are editable:
 
 This allows you freely test the templating feature on your development environment to see if it fits your individual use case before deciding on a plan upgrade.
 
-## Preview 
+### Preview 
 
 The Preview operation enables you to get an idea of how the template will render when sent to the the recipient. This is useful for sampling your changes without actually having to commit them first.
 
@@ -244,7 +244,7 @@ alt="The 'Invitation' email template customization page. There is a red box arou
 
 Clerk will populate the 'from' email address with:
 
-<local part>@<your-domain>
+`<local part>@<your-domain>`
 
 The local part depends on the type of email sent (verification code, invitation, etc).
 
