--- a/docs/authentication/configuration/email-options.mdx
+++ b/docs/authentication/configuration/email-options.mdx
@@ -28,7 +28,7 @@ Clerk allows you to modify the templates listed below.
 
 ### Email
 
-To access the email templates, navigate to the [Email](https://dashboard.clerk.com/last-active?path=customization/email) tab under the **Customization** section in the Clerk Dashboard.
+To access the email templates, navigate to the [Emails](https://dashboard.clerk.com/last-active?path=customization/email) tab under the **Customization** section in the Clerk Dashboard.
 
 <Images 
 width={3024}
@@ -66,11 +66,11 @@ The following templates are available for customization:
 
 | Template Name | Description |
 | --- | --- |
-| Invitation | SMS sent to invite a user to join your application |
-| Password changed | SMS notifying the user that their password has been changed |
-| Password removed | SMS notifying the user that their password has been removed |
-| Reset password | SMS containing an OTP (One Time Password) code that allows the user to reset their password |
-| Verification code | SMS containing an OTP (One Time Password) code for verifying account access |
+| [Invitation](https://dashboard.clerk.com/last-active?path=customization/sms/invitation/edit) | SMS sent to invite a user to join your application |
+| [Password changed](https://dashboard.clerk.com/last-active?path=customization/sms/password_changed/edit) | SMS notifying the user that their password has been changed |
+| [Password removed](https://dashboard.clerk.com/last-active?path=customization/sms/password_removed/edit) | SMS notifying the user that their password has been removed |
+| [Reset password]((https://dashboard.clerk.com/last-active?path=customization/sms/reset_password/edit)) | SMS containing an OTP (One Time Password) code that allows the user to reset their password |
+| [Verification code](https://dashboard.clerk.com/last-active?path=customization/sms/verification_code/edit) | SMS containing an OTP (One Time Password) code for verifying account access |
 
 ## Before you start 
 
@@ -88,11 +88,11 @@ Both the email and SMS editor use the [Handlebars](https://handlebarsjs.com/) te
 
 The most core Handlebars concept you should bear in mind is that in order to output a variable, you should wrap its name within double curly braces. For example: `{{app.name}}`. When the message is to be sent, this will be replaced with the actual name of the application.
 
-Using the variable insertion widgets, the variables will be inserted into the content at the desired position, so is there no need to write them by hand. Though, you can still do so if you like.
+Using the variable insertion widgets, the variables will be inserted into the content at the desired position, so there is no need to write them by hand. Though, you can still do so if you like.
 
 For further information on Handlebars, we recommend you take a look at the [official guides](https://handlebarsjs.com/guide/).
 
-There will definitely be a learning curve before you master both Revolvapp syntax and Handblebars, but we have no doubt that you will be crafting beautiful templates in no time!
+There will definitely be a learning curve before you master both Revolvapp syntax and Handlebars, but there's no doubt that you will be crafting beautiful templates in no time!
 
 ## Template operations
 
@@ -104,7 +104,7 @@ Please consult the following sub-sections to see which operations are available 
 
 ### Edit 
 
-Editing templates allows you to customize existing Clerk-sent emails and SMS messages to make them more inline with your own branding. To edit a template, click on the desired template card from the [Email][Email](https://dashboard.clerk.com/last-active?path=customization/email) or [SMS][Email](https://dashboard.clerk.com/last-active?path=customization/sms) template listing page.
+Editing templates allows you to customize existing Clerk-sent emails and SMS messages to make them more inline with your own branding. To edit a template, click on the desired template card from the [Email](https://dashboard.clerk.com/last-active?path=customization/email) or [SMS](https://dashboard.clerk.com/last-active?path=customization/sms) template listing page.
 
 To persist your changes, click on the **Apply Changes** button at the bottom right. Your changes will then take immediate effect for the corresponding application instance. 
 
@@ -117,7 +117,7 @@ This allows you freely test the templating feature on your development environme
 
 ### Preview 
 
-The Preview operation enables you to get an idea of how the template will render when sent to the the recipient. This is useful for sampling your changes without actually having to commit them first.
+The Preview operation enables you to get an idea of how the template will render when sent to the recipient. This is useful for sampling your changes without actually having to commit them first.
 
 To trigger a preview, you can click on the **Preview** button at the bottom left of the screen. The example below shows a preview of the default **Invitation** email template.
 
@@ -168,7 +168,7 @@ If your application has more than one instance, then you will also have the opti
 
 This is especially useful for promoting changes from your development or staging environment to production, after you have tested them.
 
-To copy to another instance, you will need to first click on the **Copy to** button and then from the sub-menu select the target instance.
+To copy to another instance, you will need to first click on the **Copy to** button and then from the sub-menu, select the target instance.
 
 <Callout type="warning">
   The copy icon will not appear if there are no other instances available on your application.
@@ -246,9 +246,9 @@ Clerk will populate the 'from' email address with:
 
 `<local part>@<your-domain>`
 
-The local part depends on the type of email sent (verification code, invitation, etc).
+The local part depends on the type of email sent ('verification code', 'invitation', etc).
 
-If you wish to override the local part with your own value, e.g. `accounting`, `sales`, etc, then set that value in the provided input.
+If you wish to override the local part with your own value, e.g. 'accounting', 'sales', etc, then set that value in the provided input.
 
 <Images 
 width={3024}
@@ -266,7 +266,7 @@ Note that the toolbar contains 2 types of controls:
 
 #### Shortcuts button
 
-Opens a popup with the keyboard shortcuts that the editor supports. Note that the editor supports the usual **Copy**, **Paste**, **Undo** and **Redo** shortcuts you might be accustomed to from other editors.
+Opens a popup with the keyboard shortcuts that the editor supports.
 
 <Images 
 width={3024}
